--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install postgresql client
-      run: apt-get install --yes postgres-client
+      run: |
+        apt-get update
+        apt-get install --yes --no-instal-recomends postgres-client
 
     - name: Migration
       run: make migration
