--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Migration
+      run: |
+        pwd
+        ls
+
+    - name: Migration
       run: make migration
+      working-directory: ./project
     
     - name: Test
       run: make test
